NOOP: Hook up shared in/out filters in Contacts tab * Fix a bug loading filtered rows via Ajax * Fix a bug where title of blists list wasn't being updated * Clip title in blists list and contacts list when too long

--- a/public/stylesheets/list-screen.css
+++ b/public/stylesheets/list-screen.css
@@ -1,13 +1,16 @@
 
 .headerBar
 {
-  margin-bottom: 1em;
-  text-align: right;
+    margin-bottom: 1em;
+    text-align: right;
 }
 
 .headerBar h3
 {
-  float: left;
+    float: left;
+    max-width: 37%;
+    overflow: hidden;
+    text-align: left;
 }
 
 .headerBar .headerActions
